# embedina

./: Cargo.toml  README.md
.cargo/: config.toml
bsp-sandbox/: Cargo.toml
bsp-sandbox/src/: lib.rs
discovery/: Cargo.toml
discovery/src/: lib.rs
embassy-sandbox/: Cargo.toml
embassy-sandbox/src/: lib.rs
embassy-sandbox/tests/: integration.rs
examples/: bitfield.rs  format.rs  panic.rs
sandbox/: Cargo.toml
sandbox/examples/: bitfield.rs  format.rs  led-roulette.rs  levels.rs  overflow.rs  panic.rs
sandbox/src/: lib.rs
sandbox/tests/: integration.rs
tests/: integration.rs
tooling-example/: Cargo.toml
