[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["asserthq <sanya2003ogorodov@gmail.com>"]
name = "discovery"
edition = "2024"
version = "0.1.0"


# To run all the tests via `cargo test` the tests need to be explicitly disabled for the binary targets
# If you use a standard main.rs file the following is sufficient:
# [[bin]]
# name = "embedina"
# test = false

[[bin]]
name = "led-roulette"
test = false

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
# COMMON
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
#cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
semihosting = "0.1.20"
# BOARD
stm32f3-discovery = "0.7.2"
